--- a/config/locales/es_MX.yml
+++ b/config/locales/es_MX.yml
@@ -510,7 +510,7 @@ es_MX:
     update_settings_success: La configuración de la sala fue actualizada exitosamente
     wait:
       message: La sesión todavía no ha comenzado.
-      auto: Serás enviado a la sala automáticamente cuando empiece ls sesión
+      auto: Serás enviado a la sala automáticamente cuando empiece la sesión
   settings:
     account:
       fullname: Nombre completo
