[APT16.1] Corregir acentos reportados. Añadir mensaje de alerta

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -163,6 +163,7 @@ en:
   add_to_google_calendar: "Add to Google Calendar"
   bigbluebutton: AulaParaTodos
   bigbluebutton_exception: Oops, there was an error when starting the meeting!
+  bigbluebutton_exception_active_room: You already have an active session in room% <strong>{room_name}</strong>. You must <strong>End Session</strong> in that room to start a different one.
   cancel: Cancel
   cookies:
     cookie_info: Cookies help us deliver our services. By using our services, you agree to our use of cookies.
