--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -134,6 +134,7 @@ es:
   add_to_google_calendar: "Agregar al Calendario de Google"
   bigbluebutton: AulaParaTodos
   bigbluebutton_exception: ¡Oh no! Ocurrió un error al iniciar la sesión.
+  bigbluebutton_exception_active_room: Usted ya tiene una sesión activa en la sala <strong>%{room_name}</strong>. Debe <strong>Finalizar sesión</strong> en esa sala para iniciar en una diferente.
   cancel: Cancelar
   cookies:
     cookie_info: "Las cookies nos ayudan a proveer nuestros servicios. Al utilizar nuestros servicios, usted acepta nuestro uso de las cookies."
@@ -340,7 +341,7 @@ es:
       footer_text: Puedes hacer cambios a tu sala en cualquier momento
     rename_room:
       name_placeholder: Introduce un nuevo nombre para la sala...
-  name_update_success: El nombre de la sala ha sido actualizado exitósamente
+  name_update_success: El nombre de la sala ha sido actualizado exitosamente
   no_user_email_exists: "No hay ningún usuario existente con el correo electrónico especificado. Por favor, asegúrese de que lo escribió correctamente."
   omniauth_error: Ocurrió un error al intentar ingresar utilizando OmniAuth. Por favor intente nuevamente o contacte un administrador.
   omniauth_specific_error: "Error %{error} al intentar ingresar utilizando omniauth. Por favor intente nuevamente o contacte un administrador."
@@ -417,7 +418,7 @@ es:
     access_code_required: Introduce un código de acceso valido para ingresar a la sala
     create_room: Crear una sala
     create_room_error: Ocurrió un error al crear la sala
-    create_room_success: La sala fue creada exitósamente
+    create_room_success: La sala fue creada exitosamente
     enter_the_access_code: Introduce el código de acceso de la sala
     invalid_provider: La URL introducida es invalida. Revísala e inténtalo de nuevo.
     invited: Hás sido invitado a ingresar
@@ -444,7 +445,7 @@ es:
     start: Iniciar
     unavailable: Esta sala no se encuentra disponible debido a que la cuenta de correo  de su propietario no ha sido verificado.
     update_settings_error: Ocurrió un error al actualizar la configuración de la sala
-    update_settings_success: La configuración de la sala fue actualizada exitósamente
+    update_settings_success: La configuración de la sala fue actualizada exitosamente
     wait:
       message: La sesión todavía no ha comenzado.
       auto: Serás enviado a la sala automáticamente cuando empiece la sesión
