[APT17] Ajustes en panel administrador. Cambiar fecha de creacion por la de fecha ultima sesion. Modificar origen de la informacion de la sala activa. Informacion de base de datos.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -153,6 +153,7 @@ en:
       table:
         authenticator: Authenticator
         created: Created
+        last_session: Last session
         name: Name
         not_found: No users match your search
         no_users: No users found
