--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -124,6 +124,7 @@ es:
       table:
         authenticator: Verificador
         created: Creado
+        last_session: Última sesión
         name: Nombre
         not_found: No se encontraron usuarios con ese criterio
         no_users: No se encontraron usuarios
