--- a/config/locales/es_MX.yml
+++ b/config/locales/es_MX.yml
@@ -153,6 +153,7 @@ es_MX:
       table:
         authenticator: Autenificador
         created: Creado
+        last_session: Última sesión
         name: Nombre
         not_found: No se encontraron usuarios con ese criterio
         no_users: No se encontraron usuarios
