[APT22.1] Implementación de mensaje felicitación a docentes

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -483,6 +483,7 @@ en:
     join: Join
     last_session: Last session on %{session}
     login: Enter
+    organization: Organization
     owner: Owner
     owner_banned: This room is currently unavailable
     no_room:
