--- a/config/locales/es_MX.yml
+++ b/config/locales/es_MX.yml
@@ -387,6 +387,7 @@ es_MX:
       save: Guardar cambios
       cancel_changes: Cancelar cambios
       select: Seleccionar usuario
+      select_file: Seleccionar Archivo
     merge_user:
       cancel: Cancelar
       from: Cuenta de usuario a combinar
@@ -561,3 +562,4 @@ es_MX:
     signin: "Ingresa para tener acceso a la información de tu cuenta "
     title: Verificar tu cuenta de correo
     verification: Verificación
+  columns_participant_create: ["tipoidentificacion", "identificacion", "nombre", "apellido", "email", "direccion", "pin", "telefono", "genero"]
