--- a/config/locales/es_MX.yml
+++ b/config/locales/es_MX.yml
@@ -127,6 +127,7 @@ es_MX:
       colour:
         title: Color de rol
         info: Define el color que sera asociado con el rol
+      invite_users: Permitir a los usuarios enviar invitaciones
     rooms:
       title: Salas en el servidor
       table:
@@ -517,6 +518,17 @@ es_MX:
     wait:
       message: La sesión todavía no ha comenzado.
       auto: Serás enviado a la sala automáticamente cuando empiece la sesión
+  participant:
+    manage: Administrar Participantes
+    name: Nombre
+    surnames: Apellidos
+    phone: Teléfono
+    email: Email
+    gender: Genero
+    address: Dirección
+    identification: Identificación
+    identification_type: Tipo de Identificación
+    pin: PIN
   settings:
     account:
       fullname: Nombre completo
