--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -356,6 +356,12 @@ en:
       keep: On second thought, I'll keep it.
       warning: You will <b>not</b> be able to recover this room
       recording_warning: or any of its %{recordings_num} associated recordings.
+    delete_participant:
+      confirm: Are you sure you want to delete this participant?
+      delete: I'm sure delete this participant
+      keep: On second thought, I'll keep it.
+      warning: This action removes the user from the room, but not from the platform
+      delete_warning: You can add it again by loading it from the file
     invite_user:
       email_placeholder: Enter the users' emails (seperated by commas)
       footer: The user will receive an email with instructions on how to sign up
