[APT-DAVID7] Se adiciono la funcionalidad de ingresar a la sala con el numero de identificacion

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -183,6 +183,7 @@ en:
   email: Email
   email_sent: Your %{email_type} email has been sent! (Please check your Spam folder if you haven't received it)
   enter_your_name: Enter your name!
+  enter_your_access_code: Entrer your access code
   errors:
     bigbluebutton:
       help: Please make sure the proper steps have been taken. <a href="%{doc_link}">Learn more</a>
