--- a/config/locales/es_MX.yml
+++ b/config/locales/es_MX.yml
@@ -184,6 +184,7 @@ es_MX:
   email_sent: "Tu email de %{email_type} ha sido enviado. (Revisa tu carpeta de Spam sí no lo has recibido)"
   empresa_desarrollo: Mindsit S.A.S.
   enter_your_name: Introduce tu nombre
+  enter_your_access_code: Introduzca su código de acceso
   errors:
     bigbluebutton:
       help: "Asegurate de que los pasos han sido seguidos correctamente. <a href=\"%{doc_link}\">Aprender más</a>"
