--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -388,6 +388,7 @@ en:
       require_approval: Require moderator approval before joining
       start: Allow any user to start this meeting
       footer_text: Adjustment to your room can be done at anytime.
+      private_room: Make the room private
     rename_room:
       name_placeholder: Enter a new room name...
     share_access:
