--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -450,6 +450,8 @@ es:
     login: Entrar
     organization: Organización
     owner: Dueño
+    owner_banned: Esta sala no está disponible actualmente
+    private_room_msg: Esta sala es privada para acceder ingresa desde evaluateok
     no_room:
       description: Ingresa la url o id de la sala a la que quieres acceder
       edit_profile: Editar perfil de usuario
