--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -500,7 +500,7 @@ en:
     organization: Organization
     owner: Owner
     owner_banned: This room is currently unavailable
-    private_room_msg: This room is private to access enter from evaluateok
+    private_room_msg: This room is private, to access enter from EvaluateOk
     no_room:
       description: Enter the room url or the room id for the room you want to join.
       edit_profile: Edit User Profile
