--- a/config/locales/es_MX.yml
+++ b/config/locales/es_MX.yml
@@ -500,7 +500,7 @@ es_MX:
     organization: Organización
     owner: Dueño
     owner_banned: Esta sala no está disponible actualmente
-    private_room_msg: Esta sala es privada para acceder ingresa desde evaluateok
+    private_room_msg: Esta sala es privada, para acceder ingresa desde EvaluateOk
     no_room:
       description: Ingresa la url o id de la sala a la que quieres acceder
       edit_profile: Editar perfil de usuario
