--- a/config/locales/es_MX.yml
+++ b/config/locales/es_MX.yml
@@ -189,6 +189,7 @@ es_MX:
   empresa_desarrollo: Mindsit S.A.S.
   enter_your_name: Introduce tu nombre
   enter_your_access_code: Introduzca su código de acceso
+  enter_for_finish: Presione enter al finalizar de ingresar su código
   errors:
     bigbluebutton:
       help: "Asegurate de que los pasos han sido seguidos correctamente. <a href=\"%{doc_link}\">Aprender más</a>"
@@ -262,6 +263,7 @@ es_MX:
   invite_message: "Para invitar a alquien a la sesión, enviale este enlace:"
   javascript:
     room:
+      exceeded_participants: "El máximo de participantes fue excedido y tiene %{n} participantes que ya están ingresados"
       mailer:
         subject: 'te ha invitado a ver una grabación'
         body: 'Sigue el enlace para ver la grabación'
