--- a/config/locales/es_MX.yml
+++ b/config/locales/es_MX.yml
@@ -190,6 +190,7 @@ es_MX:
   enter_your_name: Introduce tu nombre
   enter_your_access_code: Introduzca su código de acceso
   enter_for_finish: Presione enter al finalizar de ingresar su código
+  invalid_code: Introduzca un código de acceso valido
   errors:
     bigbluebutton:
       help: "Asegurate de que los pasos han sido seguidos correctamente. <a href=\"%{doc_link}\">Aprender más</a>"
