--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -171,7 +171,7 @@ en:
   aulaparatodos_exception_expiration_grace_day: Su servicio mensual a <strong>caducado</strong>, para continuar usando los servicios completos de <strong>AulaParaTodos</strong> renueve su servicio mensual aquí <a href="https://biz.payulatam.com/L0c743d0992EECE" target="_blank"><img src="http://www.payulatam.com/img-secure-2015/boton_pagar_pequeno.png" style="width:100px;"/></a>
   bigbluebutton: AulaParaTodos
   bigbluebutton_exception: Oops, there was an error when starting the meeting!
-  bigbluebutton_exception_active_room: You already have an active session in room% <strong>{room_name}</strong>. You must <strong>End Session</strong> in that room to start a different one.
+  bigbluebutton_exception_active_room: You already have an active session in room <strong>%{room_name}</strong>. You must <strong>End Session</strong> in that room to start a different one.
   cancel: Cancel
   cookies:
     cookie_info: Cookies help us deliver our services. By using our services, you agree to our use of cookies.
