--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -140,6 +140,24 @@ es:
         users_count: Numero de usuarios
     usersbyorganization:
       title: Usuarios por organización
+      all_organizations: Todas las organizaciones
+      edit_organization: Editar organizaciones
+      select_all_users: Selecionar todos los Usuarios
+      select_a_user: Seleccione un usuario, por favor
+      invalid_update: Ocurrió un error al actualizar los usuarios de la organización. Comprueba los valores de la organización y vuelve a intentarlo.
+      successful_update: Los usuarios por organización se actualizaron exitosamente
+      table:
+        authenticator: Autenticador
+        created: Creado
+        last_session: Última sesión
+        name: Nombre
+        not_found: No se encontraron usuarios con ese criterio
+        no_users: No se encontraron usuarios
+        role: Rol
+        uid: Identificador de usuario
+        username: Nombre de usuario
+        email: Email
+        organization: Organización
     users:
       invite: Invitar usuario
       edit:
@@ -155,7 +173,7 @@ es:
         unban: Desbloquear usuario
         undelete: Recuperar
       table:
-        authenticator: Verificador
+        authenticator: Autenticador
         created: Creado
         last_session: Última sesión
         name: Nombre
@@ -164,6 +182,8 @@ es:
         role: Rol
         uid: Identificador de usuario
         username: Nombre de usuario
+        email: Email
+        organization: Organización
       title: Administrar usuarios
   add_to_google_calendar: "Agregar al Calendario de Google"
   aulaparatodos_exception_expiration: Esta cuenta está en el límite de sus 30 días de uso. Para usar AulaParaTodos por otros 30 días más puedes realizar tu pago línea <a href="https://biz.payulatam.com/L0c743d0992EECE" target="_blank"><img src="http://www.payulatam.com/img-secure-2015/boton_pagar_pequeno.png" style="width:100px;"/></a> o <strong><a href="mailto:administracion@mindsit.co">contáctanos</a></strong> para gestionar tu factura vía email.
@@ -181,6 +201,7 @@ es:
     month_names: [~, Enero, Febrero, Marzo, Abril, Mayo, Junio, Julio, Agosto, Septiembre, Octubre, Noviembre, Diciembre]
   default_admin: "Está utilizando la contraseña por defecto para esta cuenta de usuario. Haga click <a href=\"%{edit_link}\">aquí </a> para cambiarla"
   delete: Eliminar
+  delete_all: Eliminar Todos
   edit: Editar
   delivery_error: "Ocurrió un error durante el envío de correo electrónico. Por favor, contacte con un administrador."
   docs: Documentación
@@ -370,6 +391,12 @@ es:
       keep: Cambie de opinión, lo conservaré
       warning: Esta acción elimina el usuario de la sala, mas no de la plataforma
       delete_warning: Puedes agregarlo nuevamente cargandolo desde el archivo
+    delete_all_participant:
+      confirm: ¿Estás seguro de querer eliminar todos los participantes?
+      delete: Estoy seguro, eliminar todos los participantes
+      keep: Cambie de opinión, los conservaré
+      warning: Esta acción elimina todos los participante de la sala, mas no de la plataforma
+      delete_warning: Puedes agregarlos nuevamente cargandolos desde el archivo  
     invite_user:
       email_placeholder: Introduce los emails de usuarios (separados por comas)
       footer: El usuario recibirá un email con instrucciones de como registrarse
@@ -423,6 +450,9 @@ es:
     update_organization:
       title: Actualizar una organización
       update: Actualizar la organización
+    update_user_by_organization:
+      title: Actualizar los usuarios
+      update: Cambiar de organización
     delete_organization:
       confirm: "¿Estas seguro de querer eliminar %{organization}?"
       delete: "Estoy seguro de eliminar ésta organización"
@@ -489,6 +519,8 @@ es:
     invite:
       fail: "Tu código ha expirado o es invalido. Sí tu crees que este es un error, contacta al administrador del sistema."
       no_invite: No tienes una invitación para ingresar. Contacta al administrador del sistema para obtener una.
+    organization:
+      fail: "No tienes acceso a esta aplicación. Sí tu crees que este es un error, contacta al administrador del sistema."
   rename: Cambiar nombre
   reset_password:
     subtitle: Reiniciar contraseña
@@ -555,7 +587,9 @@ es:
     save_participants_success: Los participantes fueron agregados exitosamente
     save_participants_error: Ocurrió un error al agregar el participante
     remove_participant_success: El participante fue removido exitosamente
+    remove_all_participant_success: Los participantes fueron removidos exitosamente
     remove_participant_error: Ocurrió un error al remover el participante
+    remove_all_participant_error: Ocurrió un error al remover los participantes
   settings:
     account:
       fullname: Nombre completo
